--- a/familytree/src/main/resources/application.properties
+++ b/familytree/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=familytree
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Siviwe_01
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
