--- a/familytree/src/main/resources/application.properties
+++ b/familytree/src/main/resources/application.properties
@@ -1,6 +1,16 @@
+server.port=8082
 spring.application.name=familytree
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Siviwe_01
+spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=postgres
+
+spring.jpa.show-sql=true
+spring.datasource.dbcp2.test-while-idle=true
+spring.datasource.dbcp2.validation-query=select 1
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
